@@ -62,6 +62,15 @@ Warning: man page
  --control-show, which are a better interface as they do not rely on any
  specific database layout.
 
+What: --new, --old (dpkg-deb options)
+Status: deprecated
+When: 1.18.x
+Warning: program
+Why:
+ These options are not future-proof, and do not give the caller any
+ guarantee of what exact format version will be used to produce the
+ output file. They have been replaced with a new --deb-format option.
+
 History of feature removals
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
